--- a/Templates/AppSource App/.github/workflows/NextMajor.yaml
+++ b/Templates/AppSource App/.github/workflows/NextMajor.yaml
@@ -41,11 +41,12 @@ jobs:
           eventId: "DO0099"
 
       - name: Read settings
-        id: ReadSettings
         uses: microsoft/AL-Go-Actions/ReadSettings@main
+        id: ReadSettings
         with:
           shell: powershell
           parentTelemetryScopeJson: ${{ steps.init.outputs.telemetryScopeJson }}
+          useBase64: 'Y'
 
       - name: Determine Workflow Depth
         id: DetermineWorkflowDepth
