--- a/Templates/AppSource App/.github/workflows/PullRequestHandler.yaml
+++ b/Templates/AppSource App/.github/workflows/PullRequestHandler.yaml
@@ -68,12 +68,13 @@ jobs:
           eventId: "DO0104"
 
       - name: Read settings
-        id: ReadSettings
         uses: microsoft/AL-Go-Actions/ReadSettings@main
+        id: ReadSettings
         with:
           shell: powershell
           parentTelemetryScopeJson: ${{ steps.init.outputs.telemetryScopeJson }}
           getEnvironments: '*'
+          useBase64: 'Y'
       
       - name: Determine Workflow Depth
         id: DetermineWorkflowDepth
