--- a/Actions/DetermineArtifactUrl/action.yaml
+++ b/Actions/DetermineArtifactUrl/action.yaml
@@ -14,7 +14,7 @@ inputs:
     required: false
     default: '.'
   settingsJson:
-    description: Settings from repository in compressed Json format
+    description: Settings from repository in compressed Json format (base64 encoded)
     required: false
     default: '{"appBuild":0,"appRevision":0}'
   secretsJson:
@@ -23,7 +23,7 @@ inputs:
     default: '{"insiderSasToken":""}'
 outputs:
   SettingsJson:
-    description: Settings in compressed Json format
+    description: Settings (with modified artifact setting) in compressed Json format (base64 encoded)
     value: ${{ steps.determineArtifactUrl.outputs.SettingsJson }}
   ArtifactUrl:
     description: The ArtifactUrl to use for building this project
@@ -34,16 +34,14 @@ outputs:
 runs:
   using: composite
   steps:
-    - name: Determine ArtifactUrl
+    - name: run
       shell: ${{ inputs.shell }}
       id: determineArtifactUrl
       env:
         _parentTelemetryScopeJson: ${{ inputs.parentTelemetryScopeJson }}
         _project: ${{ inputs.project }}
         _secretsJson: ${{ inputs.secretsJson }}
-      run: try { 
-          ${{ github.action_path }}/DetermineArtifactUrl.Action.ps1 -parentTelemetryScopeJson $env:_parentTelemetryScopeJson  -project $ENV:_project -settingsJson '${{ inputs.settingsJson }}' -secretsJson $ENV:_secretsJson
-        } catch { Write-Host "::Error::Unexpected error when running action ($($_.Exception.Message.Replace("`r",'').Replace("`n",' ')))"; exit 1 }
+      run: try { ${{ github.action_path }}/DetermineArtifactUrl.ps1 -parentTelemetryScopeJson $env:_parentTelemetryScopeJson -project $ENV:_project -settingsJson '${{ inputs.settingsJson }}' -secretsJson $ENV:_secretsJson } catch { Write-Host "::Error::Unexpected error when running action ($($_.Exception.Message.Replace("`r",'').Replace("`n",' ')))"; exit 1 }
 branding:
   icon: terminal
   color: blue
